@@ -18,7 +18,6 @@ import lombok.AllArgsConstructor;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
-import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 
 import java.sql.Timestamp;
@@ -28,7 +27,6 @@ import java.util.List;
 import java.util.Optional;
 
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 @AllArgsConstructor
@@ -70,17 +68,17 @@ public class SavedPostServiceImpl implements SavedPostService {
         String userName = securityUtils.getCurrentUserName();
         List<String> feelings = Optional.ofNullable(postFilterDTO.getFeelings())
                 .filter(list -> !list.isEmpty())
-                .map(list -> list.stream().map(Enum::name).collect(Collectors.toList()))
-                .orElseGet(() -> Arrays.stream(Feeling.values()).map(Enum::name).collect(Collectors.toList()));
+                .map(list -> list.stream().map(Enum::name).toList())
+                .orElseGet(() -> Arrays.stream(Feeling.values()).map(Enum::name).toList());
 
         Pageable pageable = PageRequest.of(
                 postFilterDTO.getPageNumber(),
                 postFilterDTO.getPageSize());
 
         return savedPostRepository.findSavedPostsByUsernameAndDayMonthYear(userName, feelings,
-                postFilterDTO.getDay(),
-                postFilterDTO.getMonth(),
-                postFilterDTO.getYear(), pageable).map(SavedPost::getPost)
+                        postFilterDTO.getDay(),
+                        postFilterDTO.getMonth(),
+                        postFilterDTO.getYear(), pageable).map(SavedPost::getPost)
                 .map(postMapper::toPostDTO);
     }
 }
